--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
   "homepage": "https://github.com/olithissen/peilomat#readme",
   "devDependencies": {
     "gulp": "^3.9.1",
+    "gulp-sftp": "^0.1.5",
     "gulp-util": "^3.0.8",
-    "minimist": "^1.2.0",
-    "vinyl-ftp": "^0.6.1"
+    "minimist": "^1.2.0"
   }
 }
